[package]
name = "meez3d_wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
meez3d = { path="../meez3d", default-features=false, features=["sdl2", "wgpu"] }

anyhow = "1.0"
clap = {version="4.5.16", features=["derive"]}
env_logger = "0.10.2"
log = "0.4.22"
pollster = "0.3"
winit = {version="0.29.15", features=["rwh_06"]}
sdl2 = {version="0.37.0", features=["image", "raw-window-handle"]}
